Fix vertical scrollbars in GC table

--- a/manifest/css/content_da.css
+++ b/manifest/css/content_da.css
@@ -38,7 +38,7 @@ div.DAF-gc-player {
   margin: 0;
   border: 1px solid #000;
   cursor: pointer;
-  overflow-x: hidden;
+  overflow: hidden;
   font-size: 0%;
 }
 
